--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <!-- Обновленный заголовок -->
     <header class="new-header">
-        <a href="https://steamcommunity.com/id/kkkimber/" target="_blank" class="author-link">
+        <a href="https://steamcommunity.com/id/kkiimber/" target="_blank" class="author-link">
             <img src="steam.svg" alt="Author">
         </a>
     </header>
@@ -93,4 +93,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
