--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
     
     <!-- Обновленный заголовок -->
     <header class="new-header">
-        <a href="https://steamcommunity.com/id/kkiimber/" target="_blank" class="author-link">
-            <img src="steam.svg" alt="Author">
-        </a>
+        <div class="author-container">
+            <a target="_blank" class="author-link">
+                <img src="info.svg" alt="Author">
+            </a>
+            <div class="author-popup">
+                <div class="popup-content">
+                    <p class="popup-title">Карта создана для <a href="https://steamcommunity.com/groups/eternitygam1ng" target="_blank" class="popup-title-a">SCP-RP Etern1tyGaming</a></p>
+                    <p class="popup-line"><span class="popup-label">Автор:</span> <a href="https://steamcommunity.com/id/kkiimber/" target="_blank" class="popup-line-a">Just</a></p>
+                    <p class="popup-line">Если вы нашли баг или у вас есть предложения по улучшению – Discord:</p>
+                    <p class="popup-discord">@kkiimber</p>
+                    <p><a href="https://www.tinkoff.ru/rm/r_DwbJJFduZN.qTUdpKnKAp/RsO4e84575" target="_blank" class="popup-pay">Поддержать автора</a></p>
+                </div>
+            </div>
+        </div>
     </header>
 
     <!-- Новая панель навигации -->
@@ -93,5 +104,4 @@
 
     <script src="js/script.js"></script>
 </body>
-
 </html>
